iRedMail-0.8.2:
    * Allow to use attribute domainGlobalAdmin for mail user.

iRedMail-0.8.1:
    * It now works on Debian wheezy. Tested with Debian wheezy alpha 1.
    * Drop support for Linux Mint. Sorry, not a server OS.
    * Add new column 'mailbox.language' in MySQL & PGSQL backends, used by
      iRedAdmin.
    * Make sure per-user BCC settings have higher priority than per-domain
      settings.
    * Enforce connections over https in Roundcube.
    * Fixed:
        + Incorrect MySQL user password and databases in MySQL backup script.
        + Add missing rotate config for iRedAPD log file on FreeBSD, OpenBSD.
        + Add missing config and SQL table required for sharing IMAP folder to
          anyone. Thanks BigMichi1 <bigmichi1 _at_ bigmichi1.de>.
        + Add missing auth service in Dovecot-2: auth-userdb.
        + Add new LDAP attribute and SQL column required by Dovecot-2 share folder:
          enabledService=lib-storage (ldap), enablelib-storage=1 (SQL).
          Thanks moreni <fmoreni _at_ simtrack.com.br> for the report.
        + [mysql & pgsql] Incorrect maildir path while using Postfix built-in
          'virtual' as transport.
        + [ldap] Require enabledService=deliver instead of enabledService=smtp
          for maillist members.
          Thanks rain6966 <uenuan@gmail> for the report.

    * Package update:
        + iRedAdmin -> 0.1.8
        + phpMyAdmin -> 3.5.1

iRedMail-0.8.0:
    * It now works on OpenBSD. Tested with OpenBSD 5.1.

iRedMail-0.8.0-beta4:
    * Add new value of enabledService: doveadm. Required by Dovecot-2.0
      service doveadm.
    * All clients are forced to use IMAPS and POPS (via STARTTLS).
      To enable POP3/IMAPS without STARTTLS again, set 'ssl=yes' and
      'disable_plaintext_auth=no' in dovecot.conf.
    * Drop support for Dovecot-1.1. At least Dovecot-1.2 is required.
    * Fixed:
        + DEBUG=NO in conf/global breaks postfix installation on FreeBSD.
    * Package update: