@@ -1,5 +1,8 @@
 iRedMail-0.8.2:
     * Allow to use attribute domainGlobalAdmin for mail user.
+    * Fixed:
+        + Incorrect log rotate setting of iRedAPD log file on FreeBSD.
+          Thanks openbsdnoob <w-chi _at_ gmx.de> for the report.
 
 iRedMail-0.8.1:
     * It now works on Debian wheezy. Tested with Debian wheezy alpha 1.
@@ -35,7 +38,7 @@ iRedMail-0.8.0-beta4:
     * Add new value of enabledService: doveadm. Required by Dovecot-2.0
       service doveadm.
     * All clients are forced to use IMAPS and POPS (via STARTTLS).
-      To enable POP3/IMAPS without STARTTLS again, set 'ssl=yes' and
+      To enable POP3/IMAP without STARTTLS again, set 'ssl=yes' and
       'disable_plaintext_auth=no' in dovecot.conf.
     * Drop support for Dovecot-1.1. At least Dovecot-1.2 is required.
     * Fixed:
